[package]
name = "ips"
version = "0.2.0"
authors = ["Andy Russell <arussell123@gmail.com>"]
edition = "2018"
description = "Parser for the IPS file format."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ips"
repository = "https://github.com/euclio/ips"
keywords = ["ips", "patch"]
categories = ["parser-implementations"]

[dependencies]
byteorder = "1.4.3"
nom = "7.1.3"
